# not_hot

./: .gitignore  CMakeLists.txt  Makefile  README.md  driver.cc
cgen/: CMakeLists.txt  cgen.cc  cgen.h  cgen_driver.h  cgen_gc.h  cgen_node.h  cgen_symbol.h  cgen_tables.h  constants.h  emitter.h  expression_coder.h
cgen/implement/: cgen_driver.cc  cgen_node.cc  cgen_symbol.cc  cgen_tables.cc  constants.cc  emitter.cc  expression_coder.cc
include/: cool-io.h  cool.h  flags.h  generic_driver.h  lineno_mng.h  list.h  symbol.h  typing_errors.h  utilities.h
include/implement/: flags.cc  symbol.cc  utilities.cc
include/tables/: cool_tree_forward.h  main_tables.h  stringtab.h  symtab.h
include/tables/implement/: stringtab.cc
include/tree/: cool-tree.h  tree.h
include/tree/implement/: cool-tree.cc  dumptype.cc  tree.cc
lib/: CMakeLists.txt  basic.h
lib/basic/: CMakeLists.txt  cool.h  flags.h  list.h  symbol.h
lib/basic/implement/: lineno_mng.cc  symbol.cc  typing_errors.cc
lib/main_structures/: CMakeLists.txt
lib/main_structures/tables/: CMakeLists.txt  cool_tree_forward.h  main_tables.h  stringtab.h  symtab.h
lib/main_structures/tables/implement/: main_tables.cc  stringtab.cc
lib/main_structures/tree/: CMakeLists.txt  cool-tree.h  tree.h
lib/main_structures/tree/implement/: cool-tree.cc  dump.cc  dumptype.cc
makefiles/: cgen  include_  parsing  parsingUtilities  semant  tables  tree
parsing/: CMakeLists.txt  LexerWrapper.h  ParserDriver.h  cool-parse.h  location.hh
parsing/driver/: ParserDriver.cc
parsing/lexer/: cool.flex  lex.yy.cc
parsing/parser/: cool.tab.cc  cool.yy  custom.cmake
resources/: branch_resolver.s
semant/: CMakeLists.txt  inheritance_checker.h  semant_driver.h
semant/implement/: inheritance_checker.cc  semant_driver.cc
